# VaultX

./: .gitignore  README.md
flutter_client/: .flutter-plugins  .flutter-plugins-dependencies  pubspec.yaml
flutter_client/android/: Readme.md  local.properties
flutter_client/android/app/src/main/: AndroidManifest.xml
flutter_client/ios/: Readme.md
flutter_client/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
flutter_client/ios/Runner/: GeneratedPluginRegistrant.m
flutter_client/lib/: main.dart
flutter_client/lib/models/: record.dart
flutter_client/lib/screens/: device_management_screen.dart  home_screen.dart  log_screen.dart  login_screen.dart  record_detail_screen.dart  registration_screen.dart
flutter_client/lib/services/: api_service.dart  auth_service.dart  device_info_service.dart  encryption_service.dart  notification_service.dart  webauthn_service.dart
rust_backend/: Cargo.toml
rust_backend/src/: main.rs
rust_backend/src/api/: authentication.rs  backup.rs  devices.rs  logs.rs  mod.rs  records.rs  registration.rs
rust_backend/src/config/: config.rs
rust_backend/src/db/: collections.rs  mod.rs  mongo_client.rs
rust_backend/src/handlers/: auth_handler.rs  mod.rs  records_handler.rs  register_handler.rs
rust_backend/src/middleware/: auth_middleware.rs
rust_backend/src/models/: auth.rs  device.rs  encryption.rs  log.rs  mod.rs  record.rs  user.rs
rust_backend/src/utils/: encryption.rs  hashing.rs  key_management.rs  logger.rs  mod.rs
(+1 files in other folders)
