[package]
name = "valutx"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.8"
mongodb = { version = "2.2", features = ["tokio-runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
hmac = "0.12"
sha2 = "0.10"
jsonwebtoken = "9"
dotenv = "0.15"
aes-gcm = "0.10"
rand = "0.8"
argon2 = "0.5"
webauthn-rs = "0.5"
futures = "0.3"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4"] }
url = "2.3"